Add hibernate validator abd swagger

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,5 +24,8 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 #log
 logging.pattern.level=info
 
+#pattern
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
 
 
