add cloud service for images

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -40,7 +40,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-
+        <!--  cloudinary-->
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.33.0</version>
+        </dependency>
+        <!--  singleton manager-->
+        <dependency>
+            <groupId>com.vmware.singleton</groupId>
+            <artifactId>singleton-manager-i18n</artifactId>
+            <version>0.6.7</version>
+        </dependency>
         <!-- JSON Web Token -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -93,6 +104,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.23</version>
         </dependency>
     </dependencies>
 
