--- a/frontend/rental/package.json
+++ b/frontend/rental/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
     "@testing-library/jest-dom": "^5.16.5",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.0",
+    "@types/styled-components": "^5.1.26",
     "typescript": "^4.8.4"
   }
 }
