--- a/frontend/rental/package.json
+++ b/frontend/rental/package.json
@@ -14,13 +14,18 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "jwt-decode": "^3.1.2",
+    "mobx": "^6.6.2",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
