--- a/frontend/rental/tsconfig.json
+++ b/frontend/rental/tsconfig.json
@@ -7,6 +7,8 @@
       "esnext"
     ],
     "allowJs": true,
+    "experimentalDecorators": true,
+    "useDefineForClassFields": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
