--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -110,6 +110,11 @@
             <artifactId>spring-context</artifactId>
             <version>5.3.23</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test-autoconfigure</artifactId>
+            <version>2.7.5</version>
+        </dependency>
     </dependencies>
 
     <build>
