--- a/frontend/rental/package.json
+++ b/frontend/rental/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.107",
     "@mui/material": "^5.10.13",
+    "@mui/x-data-grid": "^5.17.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,8 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "jwt-decode": "^3.1.2",
+    "mdb-react-ui-kit": "^5.0.0",
+    "mdbreact": "^5.2.0",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
