--- a/frontend/rental/package.json
+++ b/frontend/rental/package.json
@@ -10,6 +10,7 @@
     "@mui/lab": "^5.0.0-alpha.107",
     "@mui/material": "^5.10.13",
     "@mui/x-data-grid": "^5.17.12",
+    "@mui/x-date-pickers": "^5.0.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "dayjs": "^1.11.6",
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^5.0.0",
     "mdbreact": "^5.2.0",
