--- a/frontend/rental/package.json
+++ b/frontend/rental/package.json
@@ -25,6 +25,7 @@
     "mdbreact": "^5.2.0",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
