--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=CosCom
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 #MySQL Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/CosplayCostumes?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
