--- a/frontend/rental/package.json
+++ b/frontend/rental/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "dayjs": "^1.11.6",
+    "i18next": "^22.4.8",
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^5.0.0",
     "mdbreact": "^5.2.0",
@@ -30,6 +31,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-i18next": "^12.1.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
