--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -118,6 +118,7 @@
     </dependencies>
 
     <build>
+        <finalName>springboot-coscom</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
