--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,25 +3,14 @@ spring.application.name=CosCom
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 #MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/CosplayCostumes?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://cosplaydatabase.cchefkeiqugb.eu-central-1.rds.amazonaws.com:3306/cosplaydatabase?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=cosplaydatabase
 # Hibernate ddl
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#Maildev
-spring.mail.host=localhost
-spring.mail.port=1025
-spring.mail.username=CosplayCostumes
-spring.mail.password=CosplayCostumes
-spring.mail.properties.mail.smtp.ssl.trust=*
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=3000
-spring.mail.properties.mail.smtp.writetimeout=5000
 #log
 logging.pattern.level=info
 #jwt
