--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,11 +4,11 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 #MySQL Configuration
 #you can try going to localhost database in url : spring.datasource.url=jdbc:mysql://localhost:3306/CosplayCostumes?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
-# spring.datasource.url=jdbc:mysql://localhost:3306/cosplaycostumes?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://cosplaydatabase.cchefkeiqugb.eu-central-1.rds.amazonaws.com:3306/cosplaydatabase?useSSL=false
+ spring.datasource.url=jdbc:mysql://localhost:3306/cosplaycostumes?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://cosplaydatabase.cchefkeiqugb.eu-central-1.rds.amazonaws.com:3306/cosplaydatabase?useSSL=false
 spring.datasource.username=root
-# spring.datasource.password=root
-spring.datasource.password=cosplaydatabase
+ spring.datasource.password=root
+#spring.datasource.password=cosplaydatabase
 # Hibernate ddl
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
